--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 	id 'org.jetbrains.kotlin.jvm' version '2.0.20'
 }
 
-version = project.mod_version
+version = project.mod_version + "+" + project.minecraft_version
 group = project.maven_group
 
 base {
@@ -79,6 +79,7 @@ jar {
 publishing {
 	publications {
 		create("mavenJava", MavenPublication) {
+			version = project.mod_version + "-mc" + project.minecraft_version
 			artifactId = project.archives_base_name
 			from components.java
 		}
